--- a/index.html
+++ b/index.html
@@ -56,12 +56,6 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn">
                 <a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
@@ -73,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="cid-rDglmzq8WO mbr-fullscreen mbr-parallax-background" id="header2-2">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-rDglmzq8WO mbr-fullscreen mbr-parallax-background" id="header2-2">
 
     
 
